--- a/pets/presentation/src/main/resources/templates/pet/new.html
+++ b/pets/presentation/src/main/resources/templates/pet/new.html
@@ -19,7 +19,6 @@
   <link rel="stylesheet"
         href="../../public/css/main.css"
         th:href="@{/css/main.css}" />
-
   <script src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js"
           th:src="@{/webjars/modernizr/2.8.3/modernizr.min.js}"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -34,89 +33,91 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.css"
-    th:href="@{/webjars/getmdl-select/1.0.4/getmdl-select.min.css}" />
+    href="//cdn.rawgit.com/MEYVN-digital/mdl-selectfield/master/mdl-selectfield.min.css"
+    th:href="@{/webjars/mdl-select-component/0.0.6/mdl-selectfield.min.css}" />
   <script
     defer="defer"
-    src="https://cdn.rawgit.com/CreativeIT/getmdl-select/master/getmdl-select.min.js"
-    th:src="@{/webjars/getmdl-select/1.0.4/getmdl-select.min.js}"></script>
+    src="//cdn.rawgit.com/MEYVN-digital/mdl-selectfield/master/mdl-selectfield.min.js"
+    th:src="@{/webjars/mdl-select-component/0.0.6/mdl-selectfield.min.js}"></script>
 </head>
 <body>
 
-<div class="header-container">
-  <header class="wrapper clearfix">
-    <h1 class="title"><img
-      src="../../public/img/dog.svg"
-      th:src="@{/img/dog.svg}"
-      height="48"
-      style="margin-bottom: 4px"
-    /> Pets</h1>
-  </header>
-</div>
-
 <div class="main-container">
+  <div class="header-container">
+    <header class="wrapper clearfix">
+      <h1 class="title"><img
+        src="../../public/img/dog.svg"
+        th:src="@{/img/dog.svg}"
+        height="48"
+        style="margin-bottom: 4px"
+      /> Pets</h1>
+    </header>
+  </div>
   <div class="main wrapper clearfix">
 
     <article>
       <header>
         <h1>Adding new pet!</h1>
-        <a href="#new" th:href="@{./}">go back</a>
+        <a href="#new" th:href="@{./}">&laquo; go back</a>
       </header>
       <section>
-        <h6 style="color: red" th:if="${violations}">Errors in form!</h6>
-        <ol th:if="${violations}" style="color: red">
-          <li
-            th:each="violation : ${violations}"
-            th:text="${violation.path} + ': ' + ${violation.message}"
-          >Argh!</li>
-        </ol>
-
         <form th:action="@{/pets/new}" th:object="${newPet}" method="post">
           <fieldset>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                 th:classappend="${violations.ifKeyPresent('name','is-invalid')}"
+            >
               <input class="mdl-textfield__input"
                      type="text"
                      id="petName"
                      th:field="*{petName}"
               />
               <label class="mdl-textfield__label" for="petName">Pet name</label>
+              <span class="mdl-textfield__error"
+                    th:text="${violations.get('name')}">An error!</span>
             </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-              <input class="mdl-textfield__input"
-                     id="race"
-                     th:field="*{race}"
-                     value=""
-                     type="text"
-                     readonly="readonly"
-                     tabIndex="-1"
-                     data-val=""
-              />
-              <label class="mdl-textfield__label" for="race">Pet race</label>
-              <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu" for="race">
-                <li class="mdl-menu__item"
-                    data-val="LYNX"
-                    th:each="race : ${races}"
-                    th:attr="data-val = ${race.id}"
-                    th:text="${race.name}">lynx</li>
-              </ul>
+            <div class="mdl-selectfield mdl-js-selectfield"
+                 th:classappend="${violations.ifKeyPresent('race','is-invalid')}">
+              <select id="race"
+                th:field="*{race}"
+                class="mdl-selectfield__select">
+                <option value=""></option>
+                <option value="option_x_value"
+                        th:each="race : ${races}"
+                        th:attr="value = ${race.id}"
+                        th:text="${race.name}"
+                >option x</option>
+                <option th:if="${false}" value="option0_value">option 0</option>
+                <option th:if="${false}" value="option1_value">option 1</option>
+              </select>
+              <label class="mdl-selectfield__label" for="race">Pet race</label>
+              <span class="mdl-selectfield__error"
+                    th:text="${violations.get('race')}">An error!</span>
             </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                 th:classappend="${violations.ifKeyPresent('ownership.name','is-invalid')}"
+            >
               <input class="mdl-textfield__input"
                      type="text"
                      id="ownerName"
                      th:field="*{ownerName}"
               />
               <label class="mdl-textfield__label" for="ownerName">Owner name</label>
+              <span class="mdl-textfield__error"
+                    th:text="${violations.get('ownership.name')}">An error!</span>
             </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                 th:classappend="${violations.ifKeyPresent('ownership.surname','is-invalid')}">
               <input class="mdl-textfield__input"
                      type="text"
                      id="ownerSurname"
                      th:field="*{ownerSurname}"
               />
               <label class="mdl-textfield__label" for="ownerSurname">Owner surname</label>
+              <span class="mdl-textfield__error"
+                    th:text="${violations.get('ownership.surname')}">An error!</span>
             </div>
           </fieldset>
+          <hr />
           <fieldset>
             <!-- Accent-colored raised button -->
             <button type="submit"
@@ -126,10 +127,6 @@
           </fieldset>
         </form>
       </section>
-      <hr />
-      <footer>
-        <a href="#new" th:href="@{./}">go back</a>
-      </footer>
     </article>
 
     <aside>
@@ -146,10 +143,5 @@
   </footer>
 </div>
 
-<script
-  src="//ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"
-  th:src="@{/webjars/jquery/1.12.2/jquery.min.js}"></script>
-
-<script src="../../public/js/main.js" th:src="@{/js/main.js}"></script>
 </body>
 </html>
