Mutable-immutable WIP

--- a/pets/presentation/src/main/resources/templates/pet/new.html
+++ b/pets/presentation/src/main/resources/templates/pet/new.html
@@ -39,6 +39,12 @@
     defer="defer"
     src="//cdn.rawgit.com/MEYVN-digital/mdl-selectfield/master/mdl-selectfield.min.js"
     th:src="@{/webjars/mdl-select-component/0.0.6/mdl-selectfield.min.js}"></script>
+  <style>
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  body, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans', sans-serif;
+  }
+  </style>
 </head>
 <body>
 
