--- a/pets/presentation/src/main/resources/templates/pet/list.html
+++ b/pets/presentation/src/main/resources/templates/pet/list.html
@@ -32,6 +32,12 @@
         href="https://code.getmdl.io/1.2.1/material.blue-pink.min.css"
         th:href="@{/webjars/material-design-lite/1.2.1/dist/material.blue-pink.min.css}"
   />
+  <style>
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  body, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans', sans-serif;
+  }
+  </style>
 </head>
 <body>
 
