--- a/pets/presentation/src/main/resources/templates/pet/edit.html
+++ b/pets/presentation/src/main/resources/templates/pet/edit.html
@@ -24,21 +24,21 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <script
     defer="defer"
-    src="https://code.getmdl.io/1.2.1/material.min.js"
-    th:src="@{/webjars/material-design-lite/1.2.1/dist/material.min.js}"
+    src="//code.getmdl.io/1.3.0/material.min.js"
+    th:src="@{/webjars/material-design-lite/1.3.0/dist/material.min.js}"
   ></script>
   <link rel="stylesheet"
-        href="https://code.getmdl.io/1.2.1/material.blue-pink.min.css"
-        th:href="@{/webjars/material-design-lite/1.2.1/dist/material.blue-pink.min.css}"
+        href="//code.getmdl.io/1.3.0/material.blue-pink.min.css"
+        th:href="@{/webjars/material-design-lite/1.3.0/dist/material.blue-pink.min.css}"
   />
   <link
     rel="stylesheet"
-    href="//cdn.rawgit.com/MEYVN-digital/mdl-selectfield/master/mdl-selectfield.min.css"
-    th:href="@{/webjars/mdl-select-component/0.0.6/mdl-selectfield.min.css}" />
+    href="//cdn.jsdelivr.net/npm/getmdl-select@2.0.1/getmdl-select.min.css"
+    th:href="@{/webjars/getmdl-select/2.0.1/getmdl-select.min.css}" />
   <script
     defer="defer"
-    src="//cdn.rawgit.com/MEYVN-digital/mdl-selectfield/master/mdl-selectfield.min.js"
-    th:src="@{/webjars/mdl-select-component/0.0.6/mdl-selectfield.min.js}"></script>
+    src="//cdn.jsdelivr.net/npm/getmdl-select@2.0.1/getmdl-select.min.js"
+    th:src="@{/webjars/getmdl-select/2.0.1/getmdl-select.min.js}"></script>
   <style>
   @import url('https://fonts.googleapis.com/css?family=Open+Sans');
   body, h1, h2, h3, h4, h5, h6 {
@@ -67,7 +67,7 @@
         <a href="#new" th:href="@{./}">&laquo; go back</a>
       </header>
       <section>
-        <form th:action="@{/pets/edit}" th:object="${editPet}" method="post">
+        <form th:action="@{/pets/edit}" th:object="${editPet.data}" method="post">
           <fieldset>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                  th:classappend="${violations.ifKeyPresent('name','is-invalid')}"
@@ -75,28 +75,30 @@
               <input class="mdl-textfield__input"
                      type="text"
                      id="petName"
-                     th:field="*{data.petName}"
+                     th:field="*{petName}"
               />
               <label class="mdl-textfield__label" for="petName">Pet name</label>
               <span class="mdl-textfield__error"
                     th:text="${violations.get('name')}">An error!</span>
             </div>
-            <div class="mdl-selectfield mdl-js-selectfield"
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select"
                  th:classappend="${violations.ifKeyPresent('race','is-invalid')}">
-              <select id="race"
-                th:field="*{data.race}"
-                class="mdl-selectfield__select">
-                <option value=""></option>
-                <option value="option_x_value"
-                        th:each="race : ${races}"
-                        th:attr="value = ${race.id}"
-                        th:text="${race.name}"
-                >option x</option>
-                <option th:if="${false}" value="option0_value">option 0</option>
-                <option th:if="${false}" value="option1_value">option 1</option>
-              </select>
-              <label class="mdl-selectfield__label" for="race">Pet race</label>
-              <span class="mdl-selectfield__error"
+              <input id="race" class="mdl-textfield__input" value="" readonly />
+              <input value="" th:field="*{race}" type="hidden" name="race" />
+              <label class="mdl-textfield__label" for="race">Pet race</label>
+              <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu" for="race">
+                <li class="mdl-menu__item"
+                    data-val="BLR"
+                    th:each="racedef : ${races}"
+                    th:attr="data-val = ${racedef.id},
+                    data-selected = ${racedef.isSelected(editPet.data.race)}"
+                    th:text="${racedef.name}">Cat</li>
+                <li th:if="${false}" class="mdl-menu__item" data-val="BRA">Dog</li>
+                <li th:if="${false}" class="mdl-menu__item" data-val="FRA">Pigie</li>
+                <li th:if="${false}" class="mdl-menu__item" data-val="DEU">Fish</li>
+                <li th:if="${false}" class="mdl-menu__item" data-val="RUS">Rabbit</li>
+              </ul>
+              <span class="mdl-textfield__error"
                     th:text="${violations.get('race')}">An error!</span>
             </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
@@ -105,7 +107,7 @@
               <input class="mdl-textfield__input"
                      type="text"
                      id="ownerName"
-                     th:field="*{data.ownerName}"
+                     th:field="*{ownerName}"
               />
               <label class="mdl-textfield__label" for="ownerName">Owner name</label>
               <span class="mdl-textfield__error"
@@ -116,7 +118,7 @@
               <input class="mdl-textfield__input"
                      type="text"
                      id="ownerSurname"
-                     th:field="*{data.ownerSurname}"
+                     th:field="*{ownerSurname}"
               />
               <label class="mdl-textfield__label" for="ownerSurname">Owner surname</label>
               <span class="mdl-textfield__error"
