--- a/pets/presentation/src/main/resources/templates/pet/list.html
+++ b/pets/presentation/src/main/resources/templates/pet/list.html
@@ -27,16 +27,16 @@
           th:src="@{/webjars/modernizr/2.8.3/modernizr.min.js}"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <script
-    src="https://code.getmdl.io/1.2.1/material.min.js"
-    th:src="@{/webjars/material-design-lite/1.2.1/dist/material.min.js}"
+    src="//code.getmdl.io/1.3.0/material.min.js"
+    th:src="@{/webjars/material-design-lite/1.3.0/dist/material.min.js}"
   ></script>
   <script
     src="../../public/js/list.js"
     th:src="@{/js/list.js}"
   ></script>
   <link rel="stylesheet"
-        href="https://code.getmdl.io/1.2.1/material.blue-pink.min.css"
-        th:href="@{/webjars/material-design-lite/1.2.1/dist/material.blue-pink.min.css}"
+        href="//code.getmdl.io/1.3.0/material.blue-pink.min.css"
+        th:href="@{/webjars/material-design-lite/1.3.0/dist/material.blue-pink.min.css}"
   />
   <style>
   @import url('https://fonts.googleapis.com/css?family=Open+Sans');
