--- a/pets/presentation/src/main/resources/templates/pet/list.html
+++ b/pets/presentation/src/main/resources/templates/pet/list.html
@@ -25,7 +25,7 @@
 
   <script src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js"
           th:src="@{/webjars/modernizr/2.8.3/modernizr.min.js}"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
   <script
     src="//code.getmdl.io/1.3.0/material.min.js"
     th:src="@{/webjars/material-design-lite/1.3.0/dist/material.min.js}"
