--- a/pets/presentation/src/main/resources/templates/pet/edit.html
+++ b/pets/presentation/src/main/resources/templates/pet/edit.html
@@ -21,7 +21,7 @@
         th:href="@{/css/main.css}" />
   <script src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js"
           th:src="@{/webjars/modernizr/2.8.3/modernizr.min.js}"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
   <script
     defer="defer"
     src="//code.getmdl.io/1.3.0/material.min.js"
@@ -40,7 +40,7 @@
     src="//cdn.jsdelivr.net/npm/getmdl-select@2.0.1/getmdl-select.min.js"
     th:src="@{/webjars/getmdl-select/2.0.1/getmdl-select.min.js}"></script>
   <style>
-  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  @import url('//fonts.googleapis.com/css?family=Open+Sans');
   body, h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
   }
@@ -63,11 +63,12 @@
 
     <article>
       <header>
-        <h1>Editing!</h1>
+        <h1>Editing <th:block th:text="${editPet.data.petName}">Petsy</th:block>!</h1>
         <a href="#new" th:href="@{./}">&laquo; go back</a>
       </header>
       <section>
         <form th:action="@{/pets/edit}" th:object="${editPet.data}" method="post">
+          <input type="hidden" th:field="${editPet.reference}" />
           <fieldset>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                  th:classappend="${violations.ifKeyPresent('name','is-invalid')}"
@@ -75,6 +76,7 @@
               <input class="mdl-textfield__input"
                      type="text"
                      id="petName"
+                     value="Petsy"
                      th:field="*{petName}"
               />
               <label class="mdl-textfield__label" for="petName">Pet name</label>
