--- a/pets/presentation/src/main/resources/templates/pet/edit.html
+++ b/pets/presentation/src/main/resources/templates/pet/edit.html
@@ -21,7 +21,10 @@
         th:href="@{/css/main.css}" />
   <script src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js"
           th:src="@{/webjars/modernizr/2.8.3/modernizr.min.js}"></script>
-  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet"
+        href="//fonts.googleapis.com/icon?family=Material+Icons"
+        th:href="@{/webjars/material-design-icons/3.0.1/iconfont/material-icons.css}"
+  />
   <script
     defer="defer"
     src="//code.getmdl.io/1.3.0/material.min.js"
